Calculate TD metrics for: numberOfTasks noUserTasks lackDescription and differentDataTypes

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/documentation/BPMNDocumentationView.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/documentation/BPMNDocumentationView.css
@@ -34,6 +34,13 @@
     display: block;
 }
 
+#tdButton{
+    margin-left: 5px;
+    float: right;
+    width: 120px;
+    vertical-align: middle;
+}
+
 #tdContent{
     margin-left: 20px;
 }
